<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_ride_history"
            android:title="@string/nav_ride_history" />

        <item
            android:id="@+id/nav_payment_setup"
            android:title="@string/nav_payment_setup" />

        <item
            android:id="@+id/nav_add_cab_service"
            android:title="@string/nav_add_cab_service" />

        <item
            android:id="@+id/nav_link_with_facebook"
            android:title="@string/nav_link_with_facebook" />

        <item
            android:id="@+id/nav_invite_friends"
            android:title="@string/nav_invite_friends" />

        <item
            android:id="@+id/nav_help"
            android:title="@string/nav_help" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout" />

    </group>
</menu>
