<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_large"
    android:paddingRight="@dimen/margin_large"
    android:layout_marginTop="@dimen/margin_normal"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_large"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:text="@string/Sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_very_large"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_small"
            android:paddingTop="@dimen/margin_small"
            android:text="@string/full_name"
            android:textColor="@color/text_label_color"
            android:textSize="@dimen/textsize_normal"
            />
        <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingBottom="@dimen/padding_large"
            android:textColor="@color/text_normal"
            android:textSize="@dimen/textsize_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:paddingBottom="@dimen/margin_small"
            android:paddingTop="@dimen/margin_small"
            android:text="@string/Call_number"
            android:textColor="@color/text_label_color"
            android:textSize="@dimen/textsize_normal"
            />
        <EditText
            android:id="@+id/edt_callnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Callnumber"
            android:inputType="phone"
            android:paddingBottom="@dimen/padding_large"
            android:textColor="@color/text_normal"
            android:textSize="@dimen/textsize_normal" />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_btn_default"
            android:padding="@dimen/margin_normal"
            android:text="@string/send_code"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_normal" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_normal"
        android:paddingTop="@dimen/margin_normal"
        android:text="@string/verify_mesg"
        android:gravity="center"
        android:textColor="@color/text_label_color"
        android:textSize="@dimen/textsize_normal"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_alignParentLeft="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        >
        <EditText
            android:id="@+id/edt_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/confirm_mesg"
            android:inputType="phone"
            android:paddingTop="@dimen/margin_large"
            android:paddingBottom="@dimen/padding_large"
            android:textColor="@color/text_normal"
            android:textSize="@dimen/textsize_normal"
            android:gravity="center"
            />
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_btn_default"
            android:padding="@dimen/margin_normal"
            android:text="@string/Verify"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_normal" />
    </LinearLayout>


</LinearLayout>
