<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_large"
    android:paddingRight="@dimen/margin_large"
    android:layout_marginTop="@dimen/margin_normal"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_large"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:text="@string/payment_mesg"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_very_large"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:text="@string/paytm_integration"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_large"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:text="@string/user_name"
        android:textColor="@color/text_label_color"
        android:textSize="@dimen/textsize_normal"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingBottom="@dimen/margin_large"
        android:textColor="@color/text_normal"
        android:textSize="@dimen/textsize_normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:text="@string/Password"
        android:textAllCaps="true"
        android:textColor="@color/text_label_color"
        android:textSize="@dimen/textsize_normal"
        />
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/margin_large"
        android:textColor="@color/text_normal"
        android:textSize="@dimen/textsize_normal" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/bg_btn_default"
        android:padding="@dimen/margin_normal"
        android:text="@string/Next"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal" />

    <TextView
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_normal"
        android:paddingTop="@dimen/margin_normal"
        android:text="@string/skip"
        android:textColor="@color/link_text_color"
        android:textSize="@dimen/textsize_normal"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_really_large"
        android:layout_gravity="center"
        />

</LinearLayout>

