<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_large"
    android:paddingRight="@dimen/margin_large"
    android:layout_marginTop="@dimen/margin_normal"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_large"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:text="@string/fb_link_mesg"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_very_large"
        />

    <RadioGroup
        android:id= "@+id/enable_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_normal"
        android:paddingTop="@dimen/margin_normal"

        >
        <RadioButton
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal"
            android:textSize="@dimen/textsize_large"
            android:text="@string/yes"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal"
            android:textSize="@dimen/textsize_large"
            android:text="@string/no_decide"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/bg_btn_default"
        android:padding="@dimen/margin_normal"
        android:text="@string/Next"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/fb_link_help"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_large"
        />

</LinearLayout>

