<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/account_delete"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="@dimen/textsize_very_large"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_back"
        ></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/no"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textsize_large" />
        <LinearLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/grey_back"
            ></LinearLayout>
        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/yes"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textsize_large"
            />
    </LinearLayout>

</LinearLayout>